--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .container {
   display: flex;
-  height: 100vh;
+  /* height: 100vh; */
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -23,6 +23,8 @@
   left: 0;
   margin: 0 auto;
   width: 100%;
+  margin-bottom: 3em;
+  border-bottom: 1px solid whitesmoke;
 }
 
 .header {
@@ -37,42 +39,65 @@
 }
 .footerContainer {
   margin: 0 auto;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+
   background: rgba(236, 50, 55);
-  height: 80px;
+  max-height: 80px;
   width: 100%;
+  padding: 10px;
 }
 
 .footer {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.MuiSvgIcon-root {
+  color: white;
+}
+.footerIcon {
+  display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
+}
+.footerIcon span {
+  color: white;
+  margin-left: 5px;
 }
 
 .homeContainer {
   display: flex;
   flex-direction: column;
-  margin-top: 85px;
-  height: 80vh;
+  margin-top: 2.5em;
   max-width: 100vw;
+  padding: 1em;
 }
 
 .heroContent {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   overflow: none;
   flex: 0.5;
+  justify-content: center;
+  align-items: center;
+}
+
+.heroContent div:nth-child(1) {
+  flex: 1 1 20%;
+}
+.heroContent div:nth-child(2) {
+  flex: 1 1 60%;
 }
 
 .imageContent {
-  flex: 0.3;
+  height: 100%;
 }
 
 .imageContent img {
-  max-height: 80%;
-  max-width: 100%;
+  padding: 1em 2em;
+  max-height: 550px;
+
   object-fit: cover;
 }
 
@@ -80,11 +105,22 @@
   display: flex;
   flex-direction: column;
   flex: 0.7;
+  /* max-height: 600px; */
+  padding: 1em;
 }
 .subContent img {
-  max-height: 60%;
+  max-height: 300px;
   max-width: 100%;
   object-fit: contain;
+  padding: 1em;
+}
+
+.subContent h3,
+p {
+  padding: 1em;
+}
+.subContent ul {
+  margin-left: 2em;
 }
 
 .bottomContent {
@@ -92,12 +128,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 2em;
   flex: 0.5;
 }
 
 .bottomContent img {
+  max-height: 350px;
   max-width: 100%;
   object-fit: contain;
+}
+
+.bottomContent h4 {
+  font-size: 0.9em;
+  text-align: center;
+  color: #333;
+}
+.bottomContent p {
+  text-align: center;
+  color: #555;
 }
 
 .subBottomContent {
@@ -105,4 +153,43 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.subBottomContent h3 {
+  text-align: center;
+  color: #666;
+  font-size: 1.1em;
+  padding: 1em;
+}
+.subBottomContent div {
+  text-align: center;
+}
+
+.subBottomContent div > span {
+  text-align: center;
+  color: #666;
+  margin-left: 5px;
+  border-right: 2px solid #aaa;
+}
+@media (max-width: 768px) {
+  .subBottomContent div > span {
+    font-size: 0.5em;
+  }
+  .subBottomContent h3 {
+    font-size: 0.8em;
+  }
+
+  .bottomContent h4 {
+    font-size: 0.6em;
+  }
+  .footer {
+    flex-direction: column;
+  }
+  .footerContainer {
+    max-height: 100%;
+  }
+}
+
+.subBottomContent div > span:last-child {
+  border: none;
 }
